# esp32

./: .gitignore
.kilocode/rules/memory-bank/: context.md
firmware/esp32-idf-matter-sensors/: ADD_ESP_MATTER.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/esp32-idf-matter-sensors/components/am2320/: CMakeLists.txt  am2320.c
firmware/esp32-idf-matter-sensors/components/am2320/include/: am2320.h
firmware/esp32-idf-matter-sensors/components/ds18b20/: CMakeLists.txt  ds18b20.c
firmware/esp32-idf-matter-sensors/components/ds18b20/include/: ds18b20.h
firmware/esp32-idf-matter-sensors/components/onewire_bus/: CMakeLists.txt  onewire_bus.c
firmware/esp32-idf-matter-sensors/components/onewire_bus/include/: onewire_bus.h
firmware/esp32-idf-matter-sensors/main/: CMakeLists.txt  app_config.cpp  app_config.h  app_main.cpp  app_persist.c  app_persist.h  diagnostics_http.c  diagnostics_http.h  matter_bridge.cpp  matter_bridge.h  sensor_service.c  sensor_service.h  state_log.c  state_log.h  wifi_manager.c  wifi_manager.h
firmware/esp32-idf-matter-sensors/main/web/: app.js  index.html  styles.css
firmware/esp32-matter-sensors/: README.md  esp32_matter_sensors.ino
